        *  Changes and Developments in the ShinyItemAnalysis Package  *
        *                                                             *
        ***************************************************************

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6.-9. (2018-04-16) -
-------------------------------------------------------

MAJOR UPDATES
  o Data
    - HCI dataset was added into package.
    - Description of dataMedical was improved.
    - Description of training datasets was improved.
  o About
    - Page was improved.

MINOR UPDATES
  o Typos were fixed.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6.-8. (2018-04-13) -
-------------------------------------------------------

MAJOR UPDATES
  o IRT
    - Expected item scores were removed from IRT training NRM.
    - Interactive exercises were added into  IRT training - dichotomous
      models.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6.-7. (2018-04-12) -
-------------------------------------------------------

MAJOR UPDATES
  o Data
    - Graded data od Medical data set was added.
    - In all dataMedical data sets the criterion variable was renamed to
      StudySuccess.
  o IRT
    - Expected item scores were added into polytomous models in IRT training.
    - Selected R code was updated in IRT training.

MINOR UPDATES
  o IRT section
    - Colors of sliders and curves in IRT training section were adjusted.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.6.-6. (2018-04-10) -
-------------------------------------------------------

MAJOR UPDATES
  o Regression
    - NLR 4P model was added into model comparison.

MINOR UPDATES
  o README file was updated. Typos were fixed.
  o Design of figures was unified.
  o Download button options were unified.
  o Selected R code syntax was improved in some sections