@@ -24,6 +24,8 @@ require(psych)
 require(psychometric)
 require(reshape2)
 require(rmarkdown)
+require(shiny)
+require(shinyBS)
 require(ShinyItemAnalysis)
 require(shinyjs)
 require(stringr)
